--- a/index.html
+++ b/index.html
@@ -87,10 +87,42 @@
 		          </ul>
 	          </div>
 					</div>
+					<div class="row">
+
+						<section class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+							<div class="top-features">
+								<div class="clearfix">
+									<i class="icon-1 title-icon-front"></i>
+									<h2 class="title-front">Facilidade & Inovação</h2>
+								</div>
+								<p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.</p>
+							</div>
+						</section>
+						<section class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+							<div class="top-features">
+								<div class="clearfix">
+									<i class="icon-2 title-icon-front"></i>
+									<h2 class="title-front">Experiência de Longo Prazo</h2>
+								</div>
+								<p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.</p>
+							</div>
+						</section>
+						<section class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+							<div class="top-features">
+								<div class="clearfix">
+									<i class="icon-3 title-icon-front"></i>
+									<h2 class="title-front">Assistência Contínua</h2>
+								</div>
+								<p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.</p>
+							</div>
+						</section>
+
+					</div>
         </div>
 			</div>
 
     </div>
+
     <script src="js/jquery.js"></script>
     <script src="js/jquery-ui.js"></script>
     <script src="js/jquery-ui-touch.js"></script>
