Icons updated and Catálogo ready

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
 			<div class="row">
-				<header class="col-md-3 cf" role=“banner”>
+				<header class="col-md-3 cf" role="banner">
 	        <h1 class="brand hidden-xs hidden-sm"><a href="index.html" title="Alpha Médico Hospitalar">Alfa Médico Hospitalar</a></h1>
           <div class="navbar-header">
           	<h1><a href="index.html" title="Alpha Médico Hospitalar">Alfa Médico Hospitalar</a></h1>
@@ -90,7 +90,7 @@
 					<div class="row">
 
 						<section class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-							<div class="top-features">
+							<div class="border-content">
 								<div class="clearfix">
 									<i class="icon-1 title-icon-front"></i>
 									<h2 class="title-front">Facilidade & Inovação</h2>
@@ -99,7 +99,7 @@
 							</div>
 						</section>
 						<section class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-							<div class="top-features">
+							<div class="border-content">
 								<div class="clearfix">
 									<i class="icon-2 title-icon-front"></i>
 									<h2 class="title-front">Experiência de Longo Prazo</h2>
@@ -108,7 +108,7 @@
 							</div>
 						</section>
 						<section class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-							<div class="top-features">
+							<div class="border-content">
 								<div class="clearfix">
 									<i class="icon-3 title-icon-front"></i>
 									<h2 class="title-front">Assistência Contínua</h2>
@@ -122,7 +122,43 @@
 			</div>
 
     </div>
+    <div class="container">
+			<div class="row">
 
+				<div class="col-lg-3 col-md-3 col-sm-3">
+					<div class="content-box border-content">
+						<h3 class="heading">conheça nosso catálogo</h3>
+						<div class="item-thumbs bg-teste">
+							<a href="#fakelink" class="hover-wrap" title="Caltálogo">
+								<span class="overlay-img"></span>
+								<span class="overlay-img-ico icon-4"></span>
+							</a>
+							<img src="images/catalogo.jpg" class="img-responsive" alt="Catálogo" />
+						</div>
+						<p>Lâmpadas para microscópios, laringos, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.</p>
+					</div>
+				</div>
+
+				<div class="col-lg-6 col-md-6 col-sm-6">
+					<div class="content-box">
+						<h3 class="heading">empresas que representamos</h3>
+						<div class="bg-teste">
+
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-3 col-md-3 col-sm-3">
+					<div class="content-box">
+						<h3 class="heading">linhas de atuação</h3>
+						<div class="bg-teste">
+
+						</div>
+					</div>
+				</div>
+
+			</div>
+    </div>
     <script src="js/jquery.js"></script>
     <script src="js/jquery-ui.js"></script>
     <script src="js/jquery-ui-touch.js"></script>
