--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 				<div class="col-lg-3 col-md-3 col-sm-3">
 					<div class="content-box border-content">
-						<h3 class="heading">conheça nosso catálogo</h3>
+						<h3 class="heading">nosso catálogo</h3>
 						<div class="item-thumbs bg-teste">
 							<a href="#fakelink" class="hover-wrap" title="Caltálogo">
 								<span class="overlay-img"></span>
