--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div class="container">
 			<div class="row">
 
-				<div class="col-lg-3 col-md-3 col-sm-3">
+				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
 					<div class="content-box border-content">
 						<h3 class="heading">nosso catálogo</h3>
 						<div class="item-thumbs bg-teste">
@@ -135,15 +135,50 @@
 							</a>
 							<img src="images/catalogo.jpg" class="img-responsive" alt="Catálogo" />
 						</div>
-						<p>Lâmpadas para microscópios, laringos, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.</p>
+						<p class="mb-1">Lâmpadas para microscópios, laringos, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.</p>
 					</div>
 				</div>
 
 				<div class="col-lg-6 col-md-6 col-sm-6">
 					<div class="content-box">
 						<h3 class="heading">empresas que representamos</h3>
-						<div class="bg-teste">
-
+						<div class="panel-group" id="accordion">
+						  <div class="panel panel-default">
+						    <div class="panel-heading">
+						      <h4 class="panel-title">
+						        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"> <span aria-hidden="true" class="icon-5"></span> Nestlé</a>
+						      </h4>
+						    </div>
+						    <div id="collapseOne" class="panel-collapse collapse in">
+						      <div class="panel-body">
+						        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+						      </div>
+						    </div>
+						  </div>
+						  <div class="panel panel-default">
+						    <div class="panel-heading">
+						      <h4 class="panel-title">
+						        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"> <span aria-hidden="true" class="icon-5"></span> Baxter</a>
+						      </h4>
+						    </div>
+						    <div id="collapseTwo" class="panel-collapse collapse">
+						      <div class="panel-body">
+						        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+						      </div>
+						    </div>
+						  </div>
+						  <div class="panel panel-default">
+						    <div class="panel-heading">
+						      <h4 class="panel-title">
+						        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree"> <span aria-hidden="true" class="icon-5"></span> Medcorp</a>
+						      </h4>
+						    </div>
+						    <div id="collapseThree" class="panel-collapse collapse">
+						      <div class="panel-body">
+						        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+						      </div>
+						    </div>
+						  </div>
 						</div>
 					</div>
 				</div>
