--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="js/modernizr.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container mt-1">
 			<div class="row">
 				<header class="col-md-3 cf" role="banner">
 	        <h1 class="brand hidden-xs hidden-sm"><a href="index.html" title="Alpha Médico Hospitalar">Alfa Médico Hospitalar</a></h1>
@@ -44,13 +44,13 @@
           	<a href="#fakelink" class="ico-google btn"></a>
           </div>
         </header>
-        <div class="col-md-9">
+        <div class="col-md-9 mb-0">
 					<div class="main-slider-container">
 	          <div class="alfa-slider">
 	            <ul class="slides">
 	              <li>
 	              	<figure>
-	              		<a href="#fakelink" title=""><img src="images/slider-1.jpg" alt="Iluminação adequada, segurança para diagnósticos precisos." /></a>
+	              		<a href="#fakelink" title="Iluminação adequada, segurança para diagnósticos precisos."><img src="images/slider-1.jpg" alt="Iluminação adequada, segurança para diagnósticos precisos." /></a>
 	              		<figcaption class="slider-legend">
 	              			<div class="slider-txt col-xs-12 col-sm-8 col-lg-9">
 	              				<h3>Iluminação adequada, segurança para diagnósticos precisos.</h3>
@@ -62,7 +62,7 @@
 	              </li>
 	              <li>
 	              	<figure>
-	              		<a href="#fakelink" title=""><img src="images/slider-1.jpg" alt="Iluminação adequada, segurança para diagnósticos precisos." /></a>
+	              		<a href="#fakelink" title="Iluminação adequada, segurança para diagnósticos precisos."><img src="images/slider-1.jpg" alt="Iluminação adequada, segurança para diagnósticos precisos." /></a>
 	              		<figcaption class="slider-legend">
 	              			<div class="slider-txt col-xs-12 col-sm-8 col-lg-9">
 		              			<h3>Iluminação adequada, segurança para diagnósticos precisos.</h3>
@@ -74,7 +74,7 @@
 	              </li>
 	              <li>
 	              	<figure>
-	              		<a href="#fakelink" title=""><img src="images/slider-1.jpg" alt="Iluminação adequada, segurança para diagnósticos precisos." /></a>
+	              		<a href="#fakelink" title="Iluminação adequada, segurança para diagnósticos precisos."><img src="images/slider-1.jpg" alt="Iluminação adequada, segurança para diagnósticos precisos." /></a>
 	              		<figcaption class="slider-legend">
 		              		<div class="slider-txt col-xs-12 col-sm-8 col-lg-9">
 		              			<h3>Iluminação adequada, segurança para diagnósticos precisos.</h3>
@@ -89,7 +89,7 @@
 					</div>
 					<div class="row">
 
-						<section class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+						<section class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 							<div class="border-content">
 								<div class="clearfix">
 									<i class="icon-1 title-icon-front"></i>
@@ -98,7 +98,7 @@
 								<p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.</p>
 							</div>
 						</section>
-						<section class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+						<section class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 							<div class="border-content">
 								<div class="clearfix">
 									<i class="icon-2 title-icon-front"></i>
@@ -107,7 +107,7 @@
 								<p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.</p>
 							</div>
 						</section>
-						<section class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+						<section class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 							<div class="border-content">
 								<div class="clearfix">
 									<i class="icon-3 title-icon-front"></i>
@@ -139,7 +139,21 @@
 					</div>
 				</div>
 
-				<div class="col-lg-6 col-md-6 col-sm-6">
+				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 col-md-push-6 col-lg-push-6">
+					<div class="content-box">
+						<h3 class="heading">linhas de atuação</h3>
+						<ul class="list-a">
+							<li><span class="icon-6"></span>Nutrição Enteral</li>
+							<li><span class="icon-6"></span>Fórmula Infantil</li>
+							<li><span class="icon-6"></span>Nutrição Parenteral</li>
+							<li><span class="icon-6"></span>Tecnologia de Infusão</li>
+							<li><span class="icon-6"></span>Anestesiologia</li>
+							<li><span class="icon-6"></span>Linha de Cateteres</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-pull-3 col-lg-pull-3">
 					<div class="content-box">
 						<h3 class="heading">empresas que representamos</h3>
 						<div class="panel-group" id="accordion">
@@ -151,7 +165,7 @@
 						    </div>
 						    <div id="collapseOne" class="panel-collapse collapse in">
 						      <div class="panel-body">
-						        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+						        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it.
 						      </div>
 						    </div>
 						  </div>
@@ -163,7 +177,7 @@
 						    </div>
 						    <div id="collapseTwo" class="panel-collapse collapse">
 						      <div class="panel-body">
-						        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+						        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
 						      </div>
 						    </div>
 						  </div>
@@ -175,19 +189,10 @@
 						    </div>
 						    <div id="collapseThree" class="panel-collapse collapse">
 						      <div class="panel-body">
-						        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+						        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
 						      </div>
 						    </div>
 						  </div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-lg-3 col-md-3 col-sm-3">
-					<div class="content-box">
-						<h3 class="heading">linhas de atuação</h3>
-						<div class="bg-teste">
-
 						</div>
 					</div>
 				</div>
