News ready and bug fixes

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 		<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
 			<div class="content-box border-content">
 				<h3 class="heading">Nosso catálogo</h3>
-				<div class="item-thumbs bg-teste">
+				<div class="item-thumbs">
 					<a href="#fakelink" class="hover-wrap" title="Caltálogo">
 					<span class="overlay-img"></span>
 					<span class="overlay-img-ico icon-4"></span>
@@ -206,110 +206,130 @@
 		</div>
 	</div>
 	<div  class="slider2">
-			<h3 class="heading">últimas Notícias</h3>
-	    <div class="flexslider2">
-	    	<ul class="slides">
+		<h3 class="heading">Últimas Notícias</h3>
+		<ul class="slides">
 	    	  <li>
 	    	    <div class="row">
-
-	    	      <a href="#">
-	    	        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 square-1">
-	    	          <div class="img-container">
-	    	            <img src="images/news-1.jpg" alt="">
-	    	            <div class="img-bg-icon"></div>
-	    	          </div>
-	    	          <h4>Transparência e confiabilidade</h4>
-	    	            Mauris sit amet ligula est, eget it conseact etur lectus
-	    	        </div>
-	    	      </a>
-
-	    	      <a href="#">
-	    	        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 square-1">
-	    	          <div class="img-container">
-	    	            <img src="images/news-2.jpg" alt="">
-	    	            <div class="img-bg-icon"></div>
-	    	          </div>
-	    	          <h4>Hospital Pérola Byington</h4>
-	    	            Mauris sit amet ligula est, eget it conseact etur lectus
-	    	        </div>
-	    	      </a>
-
-	    	      <a href="#">
-	    	        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 square-1">
-	    	          <div class="img-container">
-	    	            <img src="images/news-3.jpg" alt="">
-	    	            <div class="img-bg-icon"></div>
-	    	          </div>
-	    	          <h4>Tratamento de cobaias de plástico</h4>
-	    	            Mauris sit amet ligula est, eget it conseact etur lectus
-	    	        </div>
-	    	      </a>
-
-	    	      <a href="#">
-	    	        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 square-1">
-	    	          <div class="img-container">
-	    	            <img src="images/news-4.jpg" alt="">
-	    	            <div class="img-bg-icon"></div>
-	    	          </div>
-	    	          <h4>Condicionamento de atendimento</h4>
-	    	            Mauris sit amet ligula est, eget it conseact etur lectus
-	    	        </div>
-	    	      </a>
-
+    	        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+    	          <article class="border-content">
+    	          	<div class="item-thumbs">
+    	          		<a href="#fakelink" class="hover-wrap" title="Transparência e confiabilidade">
+										<span class="overlay-img"></span>
+										<span class="overlay-img-ico icon-7"></span>
+										</a>
+    	          	  <img src="images/news-1.jpg" alt="Transparência e confiabilidade">
+    	          	</div>
+    	          	<h4>Transparência e confiabilidade</h4>
+    	          	<span class="date">18 abriel de 2013 | 10 Comentários</span>
+	  	          	<p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
+    	          </article>
+    	        </div>
+    	        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+    	          <article class="border-content">
+    	          	<div class="item-thumbs">
+    	          	  <a href="#fakelink" class="hover-wrap" title="Hospital Pérola Byington">
+										<span class="overlay-img"></span>
+										<span class="overlay-img-ico icon-7"></span>
+										</a>
+    	          	  <img src="images/news-2.jpg" alt="Hospital Pérola Byington">
+    	          	</div>
+    	          	<h4>Hospital Pérola Byington</h4>
+    	          	<span class="date">18 abriel de 2013 | 10 Comentários</span>
+    	          	<p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
+    	          </article>
+    	        </div>
+    	        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+    	          <article class="border-content">
+    	          	<div class="item-thumbs">
+    	          	  <a href="#fakelink" class="hover-wrap" title="Tratamento de cobaias de plástico">
+										<span class="overlay-img"></span>
+										<span class="overlay-img-ico icon-7"></span>
+										</a>
+    	          	  <img src="images/news-3.jpg" alt="Tratamento de cobaias de plástico">
+    	          	</div>
+    	          	<h4>Tratamento de cobaias de plástico</h4>
+    	          	<span class="date">18 abriel de 2013 | 10 Comentários</span>
+    	          	<p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
+    	          </article>
+    	        </div>
+    	        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+    	          <article class="border-content">
+    	          	<div class="item-thumbs">
+    	          	  <a href="#fakelink" class="hover-wrap" title="Condicionamento de atendimento">
+										<span class="overlay-img"></span>
+										<span class="overlay-img-ico icon-7"></span>
+										</a>
+    	          	  <img src="images/news-4.jpg" alt="Condicionamento de atendimento">
+    	          	</div>
+    	          	<h4>Condicionamento de atendimento</h4>
+    	          	<span class="date">18 abriel de 2013 | 10 Comentários</span>
+    	          	<p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
+    	          </article>
+    	        </div>
 	    	    </div>
 	    	  </li>
 	    	  <li>
 	    	    <div class="row">
-
-	    	      <a href="#">
-	    	        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 square-1">
-	    	          <div class="img-container">
-	    	            <img src="images/news-5.jpg" alt="">
-	    	            <div class="img-bg-icon"></div>
-	    	          </div>
-	    	          <h4>Condicionamento de atendimento</h4>
-	    	            Mauris sit amet ligula est, eget it conseact etur lectus
-	    	        </div>
-	    	      </a>
-
-	    	      <a href="#">
-	    	        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 square-1">
-	    	          <div class="img-container">
-	    	            <img src="images/news-6.jpg" alt="">
-	    	            <div class="img-bg-icon"></div>
-	    	          </div>
-	    	          <h4>Tratamento de cobaias de plástico</h4>
-	    	            Mauris sit amet ligula est, eget it conseact etur lectus
-	    	        </div>
-	    	      </a>
-
-	    	      <a href="#">
-	    	        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 square-1">
-	    	          <div class="img-container">
-	    	            <img src="images/news-7.jpg" alt="">
-	    	            <div class="img-bg-icon"></div>
-	    	          </div>
-	    	          <h4>Hospital Pérola Byington</h4>
-	    	            Mauris sit amet ligula est, eget it conseact etur lectus
-	    	        </div>
-	    	      </a>
-
-	    	      <a href="#">
-	    	        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 square-1">
-	    	          <div class="img-container">
-	    	            <img src="images/news-8.jpg" alt="">
-	    	            <div class="img-bg-icon"></div>
-	    	          </div>
-	    	          <h4>Transparência e confiabilidade</h4>
-	    	            Mauris sit amet ligula est, eget it conseact etur lectus
-	    	        </div>
-	    	      </a>
-
+    	        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+    	          <article class="border-content">
+    	          	<div class="item-thumbs">
+    	          	  <a href="#fakelink" class="hover-wrap" title="Tratamento de cobaias de plástico">
+										<span class="overlay-img"></span>
+										<span class="overlay-img-ico icon-7"></span>
+										</a>
+    	          	  <img src="images/news-5.jpg" alt="Tratamento de cobaias de plástico">
+    	          	</div>
+    	          	<h4>Condicionamento de atendimento</h4>
+    	          	<span class="date">18 abriel de 2013 | 10 Comentários</span>
+	  	          	<p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
+    	          </article>
+    	        </div>
+    	        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+    	          <article class="border-content">
+    	          	<div class="item-thumbs">
+    	          	  <a href="#fakelink" class="hover-wrap" title="Tratamento de cobaias de plástico">
+										<span class="overlay-img"></span>
+										<span class="overlay-img-ico icon-7"></span>
+										</a>
+    	          	  <img src="images/news-6.jpg" alt="Tratamento de cobaias de plástico">
+    	          	</div>
+    	          	<h4>Tratamento de cobaias de plástico</h4>
+    	          	<span class="date">18 abriel de 2013 | 10 Comentários</span>
+    	          	<p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
+    	          </article>
+    	        </div>
+    	        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+    	          <article class="border-content">
+    	          	<div class="item-thumbs">
+    	          		<a href="#fakelink" class="hover-wrap" title="Tratamento de cobaias de plástico">
+										<span class="overlay-img"></span>
+										<span class="overlay-img-ico icon-7"></span>
+										</a>
+    	          	  <img src="images/news-7.jpg" alt="Tratamento de cobaias de plástico">
+    	          	</div>
+    	          	<h4>Hospital Pérola Byington</h4>
+    	            <span class="date">18 abriel de 2013 | 10 Comentários</span>
+    	          	<p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
+    	          </article>
+    	        </div>
+    	        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+    	          <article class="border-content">
+    	          	<div class="item-thumbs">
+    	          		<a href="#fakelink" class="hover-wrap" title="Tratamento de cobaias de plástico">
+										<span class="overlay-img"></span>
+										<span class="overlay-img-ico icon-7"></span>
+										</a>
+    	          	  <img src="images/news-8.jpg" alt="Tratamento de cobaias de plástico">
+    	          	</div>
+    	          	<h4>Transparência e confiabilidade</h4>
+    	            <span class="date">18 abriel de 2013 | 10 Comentários</span>
+    	          	<p>A partir da demanda de seus clientes na área Médico-Hospitalar a Omega Solutions desenvolveu um sólido portifólio.</p>
+    	          </article>
+    	        </div>
 	    	    </div>
 	    	  </li>
 	    	</ul>
-	    </div>
-	  </div>
+  </div>
 </div>
 <script src="js/jquery.js"></script>
 <script src="js/jquery-ui.js"></script>
