Footer ready, improvements in semantics and bugs fixes

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <script type="text/javascript" src="js/modernizr.js"></script>
   </head>
   <body>
-    <div class="container mt-1">
+    <header class="container mt-1" role="banner">
       <div class="row">
-        <header class="col-md-3 cf" role="banner">
+        <section class="col-md-3 cf">
           <h1 class="brand hidden-xs hidden-sm"><a href="index.html" title="Alpha Médico Hospitalar">Alfa Médico Hospitalar</a></h1>
           <div class="navbar-header">
             <h1><a href="index.html" title="Alpha Médico Hospitalar">Alfa Médico Hospitalar</a></h1>
@@ -43,7 +43,7 @@
             <a href="#fakelink" class="ico-twitter btn"></a>
             <a href="#fakelink" class="ico-google btn"></a>
           </div>
-        </header>
+        </section>
         <div class="col-xs-12 col-sm-12 col-md-9 mb-0">
           <div class="main-slider-container">
             <div class="alfa-slider">
@@ -130,7 +130,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </header>
     <main class="container" role="main">
       <section class="row">
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
@@ -456,6 +456,66 @@
         </ul>
       </section>
     </main>
+    <footer class="container" role="contentinfo">
+      <div class="ct-footer">
+        <div class="row">
+          <div class="col-md-5 clearfix">
+            <div class="box-footer">
+              <h2 class="heading">Conheça-nos mais</h2>
+              <p>Envie uma mensagem ou ligue para esclarecer suas dúvidas, enviar sugestões, conhecer mais sobre nossos produtos e serviços</p>
+            </div>
+            <form role="form">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Seu nome">
+              </div>
+              <div class="form-group">
+                <input type="email" class="form-control" placeholder="Seu email">
+              </div>
+              <div class="form-group">
+                <textarea class="form-control" rows="3" placeholder="Sua mensagem"></textarea>
+              </div>
+              <button type="submit" class="btn btn-footer">Enviar mensagem <span class="icon-9"></span></button>
+            </form>
+          </div>
+          <div class="col-md-6 col-md-offset-1 pd-0">
+            <div class="col-sm-6 col-md-6 mb-0">
+              <div class="box-footer">
+                <h3 class="heading">Endereço</h3>
+                <p>Av. Prefeito Wall Ferraz, N. 15385-B, Quadra 004, Lote 10 - Brasilar, CEP: 64.035-365, Teresina - PI</p>
+              </div>
+              <div class="box-footer">
+                <h3 class="heading">Telefones</h3>
+                <p class="mb-2"><span class="icon-12"></span>+55 86 3333 2222<br>
+                  <span class="icon-12"></span>+55 86 3333 2221
+                </p>
+              </div>
+              <div class="box-footer">
+                <h3 class="heading">Emails</h3>
+                <nav class="vert-nav">
+                  <a href="suporte@alfahospitalar.com.br"><span class="icon-11"></span>suporte@alfahospitalar.com.br</a>
+                  <a href="contato@alfahospitalar.com.br"><span class="icon-11"></span>contato@alfahospitalar.com.br</a>
+                  <a href="financeiro@alfahospitalar.com.br"><span class="icon-11"></span>financeiro@alfahospitalar.com.br</a>
+                </nav>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-6 mb-0">
+              <div class="box-footer">
+                <h3 class="heading">Acesso rápido</h3>
+                <nav class="vert-nav">
+                  <a href="#fakelink"> <span class="icon-10"></span> Produtos</a>
+                  <a href="#fakelink"> <span class="icon-10"></span> Downloads</a>
+                  <a href="#fakelink"> <span class="icon-10"></span> Notícias</a>
+                  <a href="#fakelink"> <span class="icon-10"></span> Contato</a>
+                </nav>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 content-info mb-0">
+          <p>Alfa Médico Hospilatar © 2013 Todos os direitos reservados</p>
+        </div>
+      </div>
+    </footer>
     <script src="js/jquery.js"></script>
     <script src="js/jquery-ui.js"></script>
     <script src="js/jquery-ui-touch.js"></script>
