Change menu layout

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
           </div>
           <nav class="main-nav navbar-collapse collapse" role="navigation">
             <h1 class="hide">Menu de avegação</h1>
-            <a href="#fakelink" data-hover="Home"><span>Home</span></a>
-            <a href="#fakelink" data-hover="Sobre Nós"><span>Sobre Nós</span></a>
-            <a href="#fakelink" data-hover="Produtos"><span>Produtos</span></a>
-            <a href="#fakelink" data-hover="Serviços"><span>Serviços</span></a>
-            <a href="#fakelink" data-hover="Notícias"><span>Notícias</span></a>
-            <a href="#fakelink" data-hover="Contato"><span>Contato</span></a>
+            <a href="#fakelink">Home<span class="icon-10"></span></a>
+            <a href="#fakelink">Sobre Nós<span class="icon-10"></span></a>
+            <a href="#fakelink">Produtos<span class="icon-10"></span></a>
+            <a href="#fakelink">Serviços<span class="icon-10"></span></a>
+            <a href="#fakelink">Notícias<span class="icon-10"></span></a>
+            <a href="#fakelink">Contato<span class="icon-10"></span></a>
           </nav>
           <form action="get" class="main-search" role="search">
             <div class="main-search-ct">
