Starting page About, ready our team

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           </div>
           <nav class="main-nav navbar-collapse collapse" role="navigation">
             <h1 class="hide">Menu de avegação</h1>
-            <a href="#fakelink">Home<span class="icon-10"></span></a>
-            <a href="#fakelink">Sobre Nós<span class="icon-10"></span></a>
+            <a class="current">Home<span class="icon-10"></span></a>
+            <a href="pages/about.html">Sobre Nós<span class="icon-10"></span></a>
             <a href="#fakelink">Produtos<span class="icon-10"></span></a>
             <a href="#fakelink">Serviços<span class="icon-10"></span></a>
             <a href="#fakelink">Notícias<span class="icon-10"></span></a>
@@ -135,7 +135,7 @@
       <section class="row">
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
           <div class="content-box border-content">
-            <h3 class="heading">Nosso catálogo</h3>
+            <h3 class="heading-1">Nosso catálogo</h3>
             <div class="item-thumbs">
               <a href="#fakelink" class="hover-wrap" title="Caltálogo">
               <span class="overlay-img"></span>
@@ -150,7 +150,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 col-md-push-6 col-lg-push-6">
           <div class="content-box">
-            <h3 class="heading">Linhas de atuação</h3>
+            <h3 class="heading-1">Linhas de atuação</h3>
             <ul class="list-a">
               <li><span class="icon-6"></span>Nutrição Enteral</li>
               <li><span class="icon-6"></span>Fórmula Infantil</li>
@@ -163,7 +163,7 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-pull-3 col-lg-pull-3">
           <div class="content-box">
-            <h3 class="heading">Empresas que representamos</h3>
+            <h3 class="heading-1">Empresas que representamos</h3>
             <div class="panel-group" id="accordion">
               <div class="panel panel-default">
                 <div class="panel-heading">
@@ -206,7 +206,7 @@
         </div>
       </section>
       <section class="slider2">
-        <h3 class="heading">Últimas Notícias</h3>
+        <h3 class="heading-1">Últimas Notícias</h3>
         <ul class="slides">
           <li>
             <div class="row">
@@ -331,7 +331,7 @@
         </ul>
       </section>
       <section class="slider2">
-        <h3 class="heading">Produtos em Destaque</h3>
+        <h3 class="heading-1">Produtos em Destaque</h3>
         <ul class="slides">
           <li>
             <div class="row">
@@ -461,7 +461,7 @@
         <div class="row">
           <div class="col-md-5 clearfix">
             <div class="box-footer">
-              <h2 class="heading">Conheça-nos mais</h2>
+              <h2 class="heading-1">Conheça-nos mais</h2>
               <p>Envie uma mensagem ou ligue para esclarecer suas dúvidas, enviar sugestões, conhecer mais sobre nossos produtos e serviços</p>
             </div>
             <form role="form">
@@ -480,17 +480,17 @@
           <div class="col-md-6 col-md-offset-1 pd-0">
             <div class="col-sm-6 col-md-6 mb-0">
               <div class="box-footer">
-                <h3 class="heading">Endereço</h3>
+                <h3 class="heading-1">Endereço</h3>
                 <p>Av. Prefeito Wall Ferraz, N. 15385-B, Quadra 004, Lote 10 - Brasilar, CEP: 64.035-365, Teresina - PI</p>
               </div>
               <div class="box-footer">
-                <h3 class="heading">Telefones</h3>
+                <h3 class="heading-1">Telefones</h3>
                 <p class="mb-2"><span class="icon-12"></span>+55 86 3333 2222<br>
                   <span class="icon-12"></span>+55 86 3333 2221
                 </p>
               </div>
               <div class="box-footer">
-                <h3 class="heading">Emails</h3>
+                <h3 class="heading-1">Emails</h3>
                 <nav class="vert-nav">
                   <a href="suporte@alfahospitalar.com.br"><span class="icon-11"></span>suporte@alfahospitalar.com.br</a>
                   <a href="contato@alfahospitalar.com.br"><span class="icon-11"></span>contato@alfahospitalar.com.br</a>
@@ -500,7 +500,7 @@
             </div>
             <div class="col-sm-6 col-md-6 mb-0">
               <div class="box-footer">
-                <h3 class="heading">Acesso rápido</h3>
+                <h3 class="heading-1">Acesso rápido</h3>
                 <nav class="vert-nav">
                   <a href="#fakelink"> <span class="icon-10"></span> Produtos</a>
                   <a href="#fakelink"> <span class="icon-10"></span> Downloads</a>
