--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
           </div>
           <nav class="main-nav navbar-collapse collapse" role="navigation">
             <h1 class="hide">Menu de avegação</h1>
-            <a class="current">Home<span class="icon-10"></span></a>
-            <a href="pages/about.html">Sobre Nós<span class="icon-10"></span></a>
-            <a href="#fakelink">Produtos<span class="icon-10"></span></a>
-            <a href="#fakelink">Serviços<span class="icon-10"></span></a>
-            <a href="#fakelink">Notícias<span class="icon-10"></span></a>
-            <a href="#fakelink">Contato<span class="icon-10"></span></a>
+            <a class="current" title="Homepage">Home<span class="icon-10"></span></a>
+            <a href="pages/about.html" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
+            <a href="#fakelink" title="Produtos">Produtos<span class="icon-10"></span></a>
+            <a href="#fakelink" title="Serviços">Serviços<span class="icon-10"></span></a>
+            <a href="#fakelink" title="Notícias">Notícias<span class="icon-10"></span></a>
+            <a href="#fakelink" title="Contato">Contato<span class="icon-10"></span></a>
           </nav>
           <form action="get" class="main-search" role="search">
             <div class="main-search-ct">
