--- a/pages/about.html
+++ b/pages/about.html
@@ -25,12 +25,12 @@
           </div>
           <nav class="main-nav navbar-collapse collapse" role="navigation">
             <h1 class="hide">Menu de avegação</h1>
-            <a href="../index.html">Home<span class="icon-10"></span></a>
-            <a class="current">Sobre Nós<span class="icon-10"></span></a>
-            <a href="#fakelink">Produtos<span class="icon-10"></span></a>
-            <a href="#fakelink">Serviços<span class="icon-10"></span></a>
-            <a href="#fakelink">Notícias<span class="icon-10"></span></a>
-            <a href="#fakelink">Contato<span class="icon-10"></span></a>
+            <a href="../index.html" title="Homepage">Home<span class="icon-10"></span></a>
+            <a class="current" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
+            <a href="#fakelink" title="Produtos">Produtos<span class="icon-10"></span></a>
+            <a href="#fakelink" title="Serviços">Serviços<span class="icon-10"></span></a>
+            <a href="#fakelink" title="Notícias">Notícias<span class="icon-10"></span></a>
+            <a href="#fakelink" title="Contato">Contato<span class="icon-10"></span></a>
           </nav>
           <form action="get" class="main-search" role="search">
             <div class="main-search-ct">
@@ -97,7 +97,7 @@
             <section class="col-xs-12">
               <div class="border-content">
                 <div class="clearfix">
-                  <h1 class="title-front mt-2 mb-3">Conheça mais sobre a Alfa Médico Hospitalar</h1>
+                  <h1 class="title-front mt-2 mb-3">Conheça a Alfa Médico Hospitalar</h1>
                 </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
@@ -107,13 +107,13 @@
       </div>
     </header>
     <main class="container" role="main">
-			<h3 class="heading-1">Nossa equipe</h3>
+      <h3 class="heading-1">Nossa equipe</h3>
       <section class="row">
         <div class="col-xs-12 col-sm-12 col-md-4">
           <div class="content-box border-content">
-						<figure class="figure-box">
-							<img src="../images/about-1.jpg" class="img-responsive" alt="Raphaela Aguiar - Presidente"/>
-						</figure>
+            <figure class="figure-box">
+              <img src="../images/about-1.jpg" class="img-responsive" alt="Raphaela Aguiar - Presidente"/>
+            </figure>
             <h3 class="heading-2">Raphaela Aguiar</h3>
             <h5 class="sub-heading">Presidente</h5>
             <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</p>
@@ -121,9 +121,9 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="content-box border-content">
-						<figure class="figure-box">
-							<img src="../images/about-2.jpg" class="img-responsive" alt="Bruno Fernandes - Gerente Administrativo"/>
-						</figure>
+            <figure class="figure-box">
+              <img src="../images/about-2.jpg" class="img-responsive" alt="Bruno Fernandes - Gerente Administrativo"/>
+            </figure>
             <h3 class="heading-2">Bruno Fernandes</h3>
             <h5 class="sub-heading">Gerente Administrativo</h5>
             <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</p>
@@ -131,16 +131,57 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="content-box border-content">
-						<figure class="figure-box">
-							<img src="../images/about-3.jpg" class="img-responsive" alt="Carlos Zéfiro - Gerente de vendas"/>
-						</figure>
+            <figure class="figure-box">
+              <img src="../images/about-3.jpg" class="img-responsive" alt="Carlos Zéfiro - Gerente de vendas"/>
+            </figure>
             <h3 class="heading-2">Carlos Zéfiro</h3>
-            <h5 class="sub-heading">Gerente de vendas</h5>
+            <h5 class="sub-heading">Gerente de Vendas</h5>
             <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</p>
           </div>
         </div>
       </section>
-
+      <section class="row">
+        <h1 class="title-front col-xs-12 mt-2 mb-3">Conheça a Alfa Médico Hospitalar</h1>
+        <div class="col-md-8 content-box">
+          <h3 class="heading-1">Saiba mais sobre nós</h3>
+          <ul class="nav nav-tabs">
+            <li class="active"><a href="#missao" data-toggle="tab">Missão</a></li>
+            <li><a href="#visao" data-toggle="tab">Visão</a></li>
+            <li><a href="#valores" data-toggle="tab">Valores</a></li>
+          </ul>
+          <div class="tab-content">
+            <div class="tab-pane tabs-pane fade in active" id="missao">
+              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional. Desenvolver as oportunidades de negócios visando atender as necessidades do cliente.</p>
+              <p>Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero).</p>
+              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional.</p>
+            </div>
+            <div class="tab-pane tabs-pane fade" id="visao">
+              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional. Desenvolver as oportunidades de negócios visando atender as necessidades do cliente.</p>
+              <p>Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero).</p>
+              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional.</p>
+            </div>
+            <div class="tab-pane tabs-pane fade" id="valores">
+              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional.</p>
+              <p>Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero).</p>
+              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional. Desenvolver as oportunidades de negócios visando atender as necessidades do cliente.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+          <div class="content-box">
+            <h3 class="heading-1">Linhas de atuação</h3>
+            <ul class="list-a">
+              <li><span class="icon-6"></span>Nutrição Enteral</li>
+              <li><span class="icon-6"></span>Fórmula Infantil</li>
+              <li><span class="icon-6"></span>Nutrição Parenteral</li>
+              <li><span class="icon-6"></span>Tecnologia de Infusão</li>
+              <li><span class="icon-6"></span>Anestesiologia</li>
+              <li><span class="icon-6"></span>Linha de Cateteres</li>
+              <li><a href="#fakelink" title="Veja toda linha de produtos"><span class="icon-6"></span>Veja toda linha de produtos</a></li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="container" role="contentinfo">
       <div class="ct-footer">
@@ -188,10 +229,10 @@
               <div class="box-footer">
                 <h3 class="heading-1">Acesso rápido</h3>
                 <nav class="vert-nav">
-                  <a href="#fakelink"> <span class="icon-10"></span> Produtos</a>
-                  <a href="#fakelink"> <span class="icon-10"></span> Downloads</a>
-                  <a href="#fakelink"> <span class="icon-10"></span> Notícias</a>
-                  <a href="#fakelink"> <span class="icon-10"></span> Contato</a>
+                  <a href="#fakelink"><span class="icon-10"></span>Produtos</a>
+                  <a href="#fakelink"><span class="icon-10"></span>Downloads</a>
+                  <a href="#fakelink"><span class="icon-10"></span>Notícias</a>
+                  <a href="#fakelink"><span class="icon-10"></span>Contato</a>
                 </nav>
               </div>
             </div>
@@ -208,6 +249,6 @@
     <script src="../js/bootstrap.js"></script>
     <script src="../js/slider.js"></script>
     <script src="../js/app.js"></script>
-    <!--[if lt IE 9]><script src="js/selectors.js"></script><![endif]-->
+    <!--[if lt IE 9]><script src="../js/selectors.js"></script><![endif]-->
   </body>
 </html>
